# nmstate

./: .coveragerc  .coveralls.yml  .dockerignore  .environment.yaml  .gitignore  .gitleaks.toml  .lgtm.yml  .licenserc.python.yaml  .licenserc.rust.yaml  .licenserc.yaml  .packit.yml  .stdci.yml  .travis.yml  1_settingup-codespace-for-debian-packaging.sh  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS  MANIFEST.in  Makefile  README.debug.md  README.developer.md  README.install.md  README.md  SECURITY.md  bors.toml  bug_report.md  commit-template.txt  eth1_with_sriov.yml  nmstate.gpg  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  sid-login.sh  test  test-requirements.txt  (+1 more)
rust/: .rustfmt.toml  Cargo.toml  DEVEL.md  Makefile  Makefile.inc  test.yml
rust/.cargo/: config.toml
rust/src/cli/: Cargo.toml  apply.rs  autoconf.rs  config.rs  error.rs  format.rs  gen_conf.rs  gen_revert.rs  ncl.rs  persist_nic.rs  policy.rs  query.rs  result.rs  service.rs  state.rs  statistic.rs
rust/src/clib/: Cargo.toml  apply.rs  build.rs  checkpoint.rs  format.rs  gen_conf.rs  gen_diff.rs  lib.rs  logger.rs  nmstate.h.in  nmstate.pc  policy.rs  query.rs  state.rs
rust/src/clib/test/: Makefile  check_clib_soname.sh  nmpolicy_json_test.c  nmpolicy_test.c  nmpolicy_yaml_test.c  nmstate_fmt_test.c  nmstate_gen_diff_test.c  nmstate_json_test.c  nmstate_test  nmstate_test.c  nmstate_yaml_test.c
rust/src/go/api/v2/: Makefile  boilerplate.go.txt  controller-gen.sh  encoding.go  go.mod  go.sum  types.go  types_test.go  zz_generated.deepcopy.go  zz_generated.types.go
rust/src/go/apigen/: Cargo.toml  go-apigen.rs
rust/src/go/crd/v2/: Makefile  controller-gen.sh  go.mod  go.sum  groupversion_info.go  nmstate.io_clusternetworkstate.yaml  setup-testenv.sh  types.go  types_test.go  zz_generated.deepcopy.go
rust/src/go/nmstate/: .golangci.yml  Makefile  file.txt  go.mod  nmstate.go  nmstate_test.go
rust/src/go/nmstate/v2/: .golangci.yml  Makefile  go.mod  go.sum  nmstate.go  nmstate_test.go
rust/src/lib/: Cargo.toml  checkpoint.rs  deserializer.rs  dispatch.rs  dns.rs  error.rs  gen_conf.rs  hostname.rs  ieee8021x.rs  iface.rs  ip.rs  lib.rs  lldp.rs  mptcp.rs  net_state.rs  net_state_offline.rs  net_state_online.rs  nlpm.rs  ovn.rs  ovs.rs  plugin.rs  route.rs  route_rule.rs  serializer.rs  state.rs  user_defined.rs
rust/src/lib/ifaces/: base.rs  bond.rs  bridge_vlan.rs  dispatch.rs  dummy.rs  ethernet.rs  ethtool.rs  hsr.rs  infiniband.rs  inter_ifaces.rs  inter_ifaces_controller.rs  ipsec.rs  ipvlan.rs  linux_bridge.rs  loopback.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  ovs.rs  sriov.rs  user_defined.rs  vlan.rs  vrf.rs  vxlan.rs  xfrm.rs
rust/src/lib/nispor/: apply.rs  base_iface.rs  bond.rs  dns.rs  error.rs  ethernet.rs  ethtool.rs  hostname.rs  hsr.rs  infiniband.rs  ip.rs  ipvlan.rs  linux_bridge.rs  linux_bridge_port_vlan.rs  mac_vlan.rs  macsec.rs  mod.rs  mptcp.rs  route.rs  route_rule.rs  show.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
rust/src/lib/nm/: active_connection.rs  apply.rs  backend_opt.rs  bond.rs  bridge.rs  checkpoint.rs  connection.rs  device.rs  dns.rs  error.rs  ethtool.rs  gen_conf.rs  ieee8021x.rs  infiniband.rs  ip.rs  lldp.rs  mac_vlan.rs  mod.rs  mptcp.rs  nm_specific.rs  ovs.rs  profile.rs  route.rs  route_rule.rs  show.rs  sriov.rs  user.rs  version.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs  wired.rs
rust/src/lib/nm/nm_dbus/: Cargo.toml  active_connection.rs  convert.rs  dbus.rs  dbus_proxy.rs  device.rs  dns.rs  error.rs  keyfile.rs  lldp.rs  mod.rs  nm_api.rs
rust/src/lib/nm/query/: dns.rs  ip.rs  lldp.rs  mod.rs  mptcp.rs  ovs.rs  user.rs  veth.rs
rust/src/lib/nm/query_apply/: apply.rs  device.rs  dispatch.rs  dns.rs  ieee8021x.rs  ip.rs  ipvlan.rs  lldp.rs  mod.rs  mptcp.rs  ovs.rs  profile.rs  route.rs  sriov.rs  user.rs  veth.rs  vlan.rs  vpn.rs  vrf.rs  vxlan.rs
rust/src/lib/nm/settings/: bond.rs  bridge.rs  connection.rs  dns.rs  ethtool.rs  generic.rs  hsr.rs  ieee8021x.rs  infiniband.rs  inter_connections.rs  ip.rs  ipvlan.rs  loopback.rs  mac_vlan.rs  macsec.rs  mod.rs  mptcp.rs  ovs.rs  route.rs  route_rule.rs  sriov.rs  (+7 more)
rust/src/lib/ovsdb/: apply.rs  db.rs  global_conf.rs  json_rpc.rs  mod.rs  show.rs
rust/src/lib/policy/: capture.rs  iface.rs  json.rs  mod.rs  net_policy.rs  route.rs  route_rule.rs  template.rs  token.rs
rust/src/lib/query_apply/: base.rs  bond.rs  bridge_vlan.rs  dispatch.rs  dns.rs  ethernet.rs  hostname.rs  hsr.rs  iface.rs  infiniband.rs  inter_ifaces.rs  ip.rs  ipsec.rs  ipvlan.rs  linux_bridge.rs  lldp.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  mptcp.rs  net_state.rs  ovn.rs  ovs.rs  route.rs  route_rule.rs  sriov.rs  vlan.rs  vrf.rs  vxlan.rs
rust/src/lib/revert/: dns.rs  hostname.rs  mod.rs  net_state.rs  ovn.rs  ovsdb.rs  route.rs  route_rule.rs  state.rs
rust/src/lib/statistic/: inter_ifaces.rs  ip.rs  mod.rs  net_state.rs
rust/src/lib/unit_tests/: base.rs  bond.rs  bridge.rs  debug_trait.rs  dispatch.rs  dns.rs  ethernet.rs  ethtool.rs  gen_diff.rs  gen_revert.rs  ifaces.rs  ifaces_ctrller.rs  infiniband.rs  ip.rs  ipsec.rs  lldp.rs  mac_vlan.rs  mac_vtap.rs  mod.rs  mptcp.rs  net_state.rs  nlpm.rs  ovn.rs  ovs.rs  ovsdb.rs  route.rs  route_rule.rs  sriov.rs  state.rs  statistic.rs  testlib.rs  user_defined.rs  vlan.rs  vrf.rs  vxlan.rs
rust/src/libnm_dbus/: Cargo.toml  active_connection.rs  convert.rs  dbus.rs  dbus_proxy.rs  dbus_value.rs  device.rs  dns.rs  error.rs  keyfile.rs  lib.rs  lldp.rs  nm_api.rs
rust/src/libnm_dbus/connection/: bond.rs  bridge.rs  conn.rs  dns.rs  ethtool.rs  ieee8021x.rs  infiniband.rs  ip.rs  mac_vlan.rs  macros.rs  mod.rs  ovs.rs  route.rs  route_rule.rs  sriov.rs  user.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs  wired.rs
rust/src/nlp/: Cargo.toml
rust/src/nlp/src/: npl.rs
rust/src/python/: requirements.txt  setup.py
rust/src/python/libnmstate/: __init__.py  clib_wrapper.py  error.py  gen_conf.py  gen_diff.py  iplib.py  netapplier.py  netinfo.py  nmpolicy.py  prettystate.py  schema.py  state.py
(+699 files in other folders)
