[metadata]
name = nmstate
author = Red Hat
summary = nmstate
license = GNU GPLv2
description-file = README.md
long-description-content-type = text/markdown
url=https://nmstate.github.io/

[files]
packages =
    libnmstate
    nmstatectl

[entry_points]
console_scripts =
    nmstatectl = nmstatectl.nmstatectl:main
