[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/clib",
    "src/lib",
]

[workspace.dependencies]
log = "0.4.17"
serde_yaml = "0.9"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}

[workspace.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true
