[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/clib",
    "src/lib",
]

[workspace.dependencies]
log = "0.4.17"
serde_yaml = "0.9"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
serde_json = { version = "1.0.75", default-features = false }
nmstate = { path = "src/lib", version = "2.2", default-features = false }
nispor = "1.2"
uuid = { version = "1.1 ", default-features = false, features = ["v4"] }
nix = { version = "0.26.2", default-features = false, features = ["feature", "hostname"] }
zbus = { version = "1.9.2", default-features = false}
zvariant = {version = "2.10.0", default-features = false}
libc = "0.2.74"
once_cell = "1.12.0"
env_logger = "0.10.0"
clap = { version = "3.1", features = ["cargo"] }
chrono = "0.4"
toml = "0.8.10"
# For the seek of compiling on Rust 1.66
ctrlc = "<=3.4.2"

[workspace.metadata.vendor-filter]
# For now we only care about tier 1+2 Linux
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true
