[package]
name = "nmstatectl"
version = "2.2.1"
authors = ["Gris Ge <fge@redhat.com>"]
edition = "2018"
rust-version = "1.60"

[[bin]]
name = "nmstatectl"
path = "ncl.rs"

[dependencies]
nmstate = {path = "../lib", default-features = false}
serde_yaml = "0.9"
clap = { version = "3.1", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0.75"
ctrlc = { version = "3.2.1", optional = true }
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4"

[features]
default = ["query_apply", "gen_conf"]
query_apply = ["nmstate/query_apply", "dep:ctrlc"]
gen_conf = ["nmstate/gen_conf"]
