[package]
name = "nmstatectl"
version = "2.2.33"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Command line tool for networking management in a declarative manner"
license = "Apache-2.0"
homepage = "https://nmstate.io"
documentation = "https://nmstate.io"
repository = "https://github.com/nmstate/nmstate"
keywords = ["network", "linux"]
categories = ["network-programming", "os::linux"]
edition = "2021"
rust-version = "1.58"

[[bin]]
name = "nmstatectl"
path = "ncl.rs"

[dependencies]
nmstate = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = [ "signal"] }
uuid = { workspace = true }
chrono = { workspace = true }
nispor = { workspace = true, optional = true }
toml = { workspace = true }

[features]
default = ["query_apply", "gen_conf", "gen_revert"]
query_apply = ["nmstate/query_apply", "dep:tokio", "dep:nispor"]
gen_conf = ["nmstate/gen_conf"]
gen_revert = ["nmstate/gen_revert"]
