[package]
name = "nmstate-clib"
description = "Nmstate C binding"
version = "2.2.28"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58"
build = "build.rs"

[lib]
name = "nmstate"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
nmstate = { path = "../lib", default-features = false }
libc = "0.2.74"
serde_json = "1.0"
serde_yaml = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
once_cell = "1.12.0"

[features]
default = ["query_apply", "gen_conf"]
query_apply = ["nmstate/query_apply"]
gen_conf = ["nmstate/gen_conf"]
