[package]
name = "nmstate-clib"
description = "Nmstate C binding"
version = "2.2.35"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.66"
build = "build.rs"

[lib]
name = "nmstate"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
nmstate = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }

[features]
default = ["query_apply", "gen_conf"]
query_apply = ["nmstate/query_apply"]
gen_conf = ["nmstate/gen_conf"]
