[package]
name = "nmstate"
version = "2.2.6"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Library for networking management in a declarative manner"
license = "Apache-2.0"
homepage = "https://nmstate.io"
documentation = "https://nmstate.io"
repository = "https://github.com/nmstate/nmstate"
keywords = ["network", "linux"]
categories = ["network-programming", "os::linux-apis"]
rust-version = "1.58"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies.nispor]
version = "1.2.9"
optional = true

[dependencies.ipnet]
version = "2.5.0"
default-features = false

[dependencies.zvariant]
version = "2.10.0"
default-features = false

[dependencies.uuid]
version = "1.1"
default-features = false
features = ["v4", "v5"]

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.zbus]
version = "1.9.2"
default-features = false
optional = true

[dependencies.serde_json]
version = "1.0.68"
default-features = false
features = [ "preserve_order" ]

[dependencies.serde]
version = "1.0.132"
default-features = false
features = ["derive"]

[dependencies.nix]
version = "0.24.1"
optional = true
default-features = false
features = ["feature", "hostname"]

[dev-dependencies]
serde_yaml = "0.9"

[features]
default = ["query_apply", "gen_conf"]
query_apply = ["nispor", "nix", "zbus"]
gen_conf = []
