[package]
name = "nmstate"
version = "2.2.22"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Library for networking management in a declarative manner"
license = "Apache-2.0"
homepage = "https://nmstate.io"
documentation = "https://nmstate.io"
repository = "https://github.com/nmstate/nmstate"
keywords = ["network", "linux"]
categories = ["network-programming", "os::linux-apis"]
rust-version = "1.60"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
serde_yaml = "0.9"

[dependencies.nispor]
version = "1.2.15"
optional = true

[dependencies.zvariant]
version = "2.10.0"
default-features = false

[dependencies.uuid]
version = "1.1"
default-features = false
features = ["v4", "v5"]

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.zbus]
version = "1.9.2"
default-features = false
optional = true

[dependencies.serde_json]
version = "1.0.68"
default-features = false
features = [ "preserve_order" ]

[dependencies.serde]
version = "1.0.132"
default-features = false
features = ["derive"]

[dependencies.nix]
version = "0.26.2"
optional = true
default-features = false
features = ["feature", "hostname"]

[dev-dependencies]
serde_yaml = "0.9"

[features]
default = ["query_apply", "gen_conf", "gen_revert"]
query_apply = ["dep:nispor", "dep:nix", "dep:zbus"]
gen_conf = []
gen_revert = []
