[package]
name = "nmstate"
version = "2.2.32"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Library for networking management in a declarative manner"
license = "Apache-2.0"
homepage = "https://nmstate.io"
documentation = "https://nmstate.io"
repository = "https://github.com/nmstate/nmstate"
keywords = ["network", "linux"]
categories = ["network-programming", "os::linux-apis"]
rust-version = "1.66"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
serde_yaml = { workspace = true }

[dependencies.nispor]
workspace = true
optional = true

[dependencies.zvariant]
workspace = true

[dependencies.uuid]
workspace = true
features = ["v5"]

[dependencies.log]
workspace = true

[dependencies.zbus]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.serde]
workspace = true

[dependencies.nix]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dev-dependencies]
serde_yaml = { workspace = true }

[features]
default = ["query_apply", "gen_conf", "gen_revert"]
query_apply = ["dep:nispor", "dep:nix", "dep:zbus", "dep:tokio"]
gen_conf = []
gen_revert = []
